--- a/mall-front/mall-front-service/pom.xml
+++ b/mall-front/mall-front-service/pom.xml
@@ -15,6 +15,12 @@
             <groupId>cn.tedu</groupId>
             <artifactId>mall-pojo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.7.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
